--- a/nofrontier-food/.gitignore
+++ b/nofrontier-food/.gitignore
@@ -32,5 +32,8 @@ build/
 ### VS Code ###
 .vscode/
 
-
-/src/main/resources/application*.properties
+## env vars
+application.properties
+application-development.properties
+application-production.properties
+flyway.properties
