--- a/nofrontier-food/.gitignore
+++ b/nofrontier-food/.gitignore
@@ -33,7 +33,7 @@ build/
 .vscode/
 
 ## env vars
-application.properties
-application-development.properties
-application-production.properties
-flyway.properties
+src/main/resources/application.properties
+src/main/resources/application-development.properties
+src/main/resources/application-production.properties
+src/main/resources/flyway.properties
